--- a/public/static/user-guide/index.en.html
+++ b/public/static/user-guide/index.en.html
@@ -4427,7 +4427,7 @@
 
     <p class="c1"><span class="c0">
       BUDA also offers an advanced search option, which functions in the same way
-      as BUDA 1.0 and is covered in detail in the rest of this guide:
+      as BUDA 1.0 and is covered in detail in the rest of this guide.
     </span></p>
 
     <p class="c1"><span><img src="images/buda2-image0.gif" /></span></p>
