--- a/public/static/user-guide/index.en.html
+++ b/public/static/user-guide/index.en.html
@@ -4489,7 +4489,7 @@
     <h3 class="c7" id="h.pqtvxqa8fjd3"><span class="">Searching for a Text</span></h2>
     <p class="c1"><span class="c0">Every search on BUDA starts the same: by choosing a search facet, entering keywords,
         and selecting a language.</span></p>
-    <p class="c1"><span>1. In the search bar, select </span><span class="c2">in versions</span><span
+    <p class="c1"><span>1. In the search bar, select </span><span class="c2">in texts</span><span
         class="c0">&nbsp;from
         the drop down menu.</span></p>
     <p class="c1"><span class="c0">2. Type the name of the text you want to find. As you type, BUDA will narrow the
