--- a/public/static/user-guide/index.en.html
+++ b/public/static/user-guide/index.en.html
@@ -4690,7 +4690,11 @@
         style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 624.00px; height: 440.00px;"><img
           alt="" src="images/image17.png"
           style="width: 624.00px; height: 440.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
-          title=""></span></p>
+          title=""></span></p><p class="c1"><span
+            style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 624.00px; height: 440.00px;"><img
+              alt="" src="images/image17b.png"
+              style="width: 624.00px; height: 440.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
+              title=""></span></p>
     <p class="c3 subtitle" id="h.rep3zm6yycuj"><span class="c11">Viewing the work record</span></p>
     <h4 class="c24" id="h.hhq3jvejweo3"><span class="">Viewing Scans</span></h3>
     <p class="c1"><span>To go directly to scans of the text and see them in the image viewer, select the </span><span
@@ -4702,14 +4706,14 @@
           style="width: 624.00px; height: 476.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
           title=""></span></p>
     <p class="c3 subtitle" id="h.uom3wxf7cuph"><span class="c11">Opening a text&#39;s scans</span></p>
-    <p class="c1"><span>To see the scan record first and then view the scan in the image viewer, select the </span><span
+    <!-- <p class="c1"><span>To see the scan record first and then view the scan in the image viewer, select the </span><span
         class="c2">Scans</span><span class="c0">&nbsp;tab and then select the image of the text.</span></p>
     <p class="c1"><span
         style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 624.00px; height: 601.33px;"><img
           alt="" src="images/image39.gif"
           style="width: 624.00px; height: 601.33px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
           title=""></span></p>
-    <p class="c3 subtitle" id="h.ltsjupa9a9br"><span class="c18">Viewing the scan record and opening a scan</span></p>
+    <p class="c3 subtitle" id="h.ltsjupa9a9br"><span class="c18">Viewing the scan record and opening a scan</span></p> -->
     <h4 class="c24" id="h.jzgvhol1mwnq"><span class="">Viewing E-texts</span></h3>
     <p class="c1"><span>To go directly to an e-text (if available) and see it in the e-text viewer, select the
       </span><span class="c2">laptop icon</span><span>&nbsp;or </span><span class="c2">Open in E-text Viewer</span><span
@@ -4720,7 +4724,7 @@
           style="width: 624.00px; height: 440.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
           title=""></span></p>
     <p class="c3 subtitle" id="h.vlq5yab2q5oc"><span class="c18">Opening an e-text</span></p>
-    <p class="c1"><span>To see the e-text record first and then view it in the e-text viewer, select </span><span
+    <!-- <p class="c1"><span>To see the e-text record first and then view it in the e-text viewer, select </span><span
         class="c2">Open Record</span><span class="c0">&nbsp;and then select the image of the text.</span></p>
     <p class="c1"><span
         style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 624.00px; height: 525.33px;"><img
@@ -4729,7 +4733,7 @@
           title=""></span></p>
     <p class="c3 subtitle" id="h.vbjuxho58fvd"><span class="c18">Viewing an e-text record and opening an e-text</span>
       <hr style="page-break-before:always;display:none;">
-    </p>
+    </p> -->
     <h2 class="c5" id="h.5ijt0mns7gy"><span>How to Find Data About a </span><span>Person</span></h1>
     <p class="c1"><span>BUDA&#39;s person records provide a wealth of biographical data about the authors contained in
         our
