--- a/public/static/user-guide/index.en.html
+++ b/public/static/user-guide/index.en.html
@@ -4684,8 +4684,12 @@
         later.</span></p>
     <h4 class="c24" id="h.14f67g6m6yta"><span class="">Viewing the Work Record</span></h3>
     <p class="c1"><span>The work record contains information about the abstract work that this text is a version of. It
-        also has links to other versions of the same work. To view it, select the </span><span class="c2">left
-        tab</span><span class="c0">&nbsp;on the version record.</span></p>
+        also has links to other versions of the same work. To view it, either click on the link labeled with <b>(Work)</b> 
+        in the breadcrumbs at the top of the page, or go to the bottom of the page and click on the link in the <b>Work Page</b> property, 
+        at the top of the <b>Extended Properties</b> section.  
+        <!-- To view it, select the </span><span class="c2">left tab</span><span class="c0">&nbsp;on the version record.</span> -->
+      
+      </p>
     <p class="c1"><span
         style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 624.00px; height: 440.00px;"><img
           alt="" src="images/image17.png"
@@ -4715,8 +4719,8 @@
           title=""></span></p>
     <p class="c3 subtitle" id="h.ltsjupa9a9br"><span class="c18">Viewing the scan record and opening a scan</span></p> -->
     <h4 class="c24" id="h.jzgvhol1mwnq"><span class="">Viewing E-texts</span></h3>
-    <p class="c1"><span>To go directly to an e-text (if available) and see it in the e-text viewer, select the
-      </span><span class="c2">laptop icon</span><span>&nbsp;or </span><span class="c2">Open in E-text Viewer</span><span
+    <p class="c1"><span>To go directly to an e-text (if available) and see it in the e-text viewer, click on the
+      </span><span class="c2">Etext snippet</span><span>&nbsp;or </span><span class="c2">Open in E-text Viewer</span><span
         class="c0">. </span></p>
     <p class="c1"><span
         style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 624.00px; height: 440.00px;"><img
@@ -4890,13 +4894,19 @@
           style="width: 624.00px; height: 641.33px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
           title=""></span></p>
     <p class="c3 subtitle" id="h.x59b0ffl9hpx"><span class="c11">A person record</span></p>
-    <p class="c1"><span>At the bottom of a person page, is a gray box labeled </span><span class="c2">Related
+    <p class="c1"><span
+        style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 624.00px; height: 641.33px;"><img
+          alt="" src="images/image30b.png"
+          style="width: 624.00px; height: 641.33px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
+          title=""></span></p>
+    <!-- <p class="c1"><span>At the bottom of a person page, is a gray box labeled </span><span class="c2">Related
         Works</span><span>. This contains all the works associated with this person. These associated items are divided
         into two groups: </span><span class="c2">Created By </span><span>and</span><span
         class="c2">&nbsp;About</span><span>. </span><span class="c2">Created By</span><span>&nbsp;lists the works
         written
         by the person. </span><span class="c2">About</span><span>&nbsp;lists the works </span><span>regarding
-      </span><span class="c0">the person. </span></p>
+      </span><span class="c0">the person. </span></p> -->
+      <p class="c1"><span>At the top of a person page, is a gray box containing all the texts related to this person. You can make a <span class="c2">simple search</span> within these texts, using the search input field above the gray box, and/or <span class="c2">filter its content</span> using the checkboxes on the left.</span></p>
     <p class="c1"><span
         style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 624.00px; height: 508.00px;"><img
           alt="" src="images/image23.png"
