screenshots/updates + minor fixes (#1058)

--- a/public/static/user-guide/index.en.html
+++ b/public/static/user-guide/index.en.html
@@ -5090,7 +5090,11 @@
           alt="" src="images/image7.png"
           style="width: 624.00px; height: 512.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
           title=""></span></p>
-    <p class="c3 subtitle" id="h.pvb5wqlz0pun"><span class="c11">A place record</span></p>
+    <p class="c3 subtitle" id="h.pvb5wqlz0pun"><span class="c11">A place record</span></p><p class="c1"><span
+      style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 624.00px; height: 512.00px;"><img
+        alt="" src="images/image7b.png"
+        style="width: 624.00px; height: 512.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
+        title=""></span></p>
     <h4 class="c24" id="h.qmmw8y9nu2tk"><span class="">Connections to Other Places</span></h3>
     <p class="c1"><span>To learn about the place(s) where the place you searched for is located, select a place in the
       </span><span class="c2">Located In</span><span class="c0">&nbsp;section. This could be a prefecture if you
@@ -5115,18 +5119,16 @@
           title=""></span></p>
     <p class="c3 subtitle" id="h.y9yx8ih8vukb"><span class="c11">Places contained in the place</span></p>
     <p class="c1"><span class="c2">Note</span><span>: For places that contain more than 20 smaller places within them,
-        only the first 20 are listed. To see all of them, select </span><span class="c2">see 10
-        more</span><span>&nbsp;and
-        then </span><span class="c2">Browse all</span><span class="c0">.</span></p>
+        only the first 20 are listed. To see more of them, select </span><span class="c2">see 10
+        more</span><span>&nbsp;and/or
+        </span><span class="c2">Browse all</span><span class="c0">.</span></p>
     <h4 class="c24" id="h.5j9jzcw9xxry"><span
-        style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 624.00px; height: 604.00px;"><img
+        style="overflow: hidden; display: inline-block; width:100%;margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); "><img
           alt="" src="images/image16.gif"
-          style="width: 624.00px; height: 604.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
+          style="width: 100%; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
           title=""></span></h3>
     <h4 class="c24" id="h.y4qnijaxans6"><span class="">Related Resources</span></h3>
-    <p class="c1"><span class="c0">This section includes all of the texts in BUDA that are about, or have sections
-        about,
-        the place that you searched for.</span></p>
+    <p class="c1"><span class="c0">At the top of a place page, is a gray box containing all the resources related to this place. You can make a <span class="c2">simple search</span> within these resources, using the search input field above the gray box, and/or <span class="c2">filter its content</span> using the checkboxes on the left.</span></p>
     <p class="c1"><span
         style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 624.00px; height: 422.67px;"><img
           alt="" src="images/image26.png"
@@ -5138,7 +5140,7 @@
     <h2 class="c5" id="h.mnjb574f1fiq"><span class="c6">How to Find a Collection</span></h1>
     <p class="c1"><span>BUDA has </span><span class="c14"><a class="c4"
           target="_blank"
-          href="https://library.bdrc.io/all-collections?t=Product&s=title">more
+          href="/all-collections?t=Product&s=title">more
           than 100 collections</a></span><span>&nbsp;</span><span class="c0">that represent libraries, personal
         collections, and more, allowing you to search and browse within these collections without leaving BUDA. </span>
     </p>
