--- a/public/static/user-guide/index.en.html
+++ b/public/static/user-guide/index.en.html
@@ -5178,14 +5178,14 @@
     <h3 class="c7" id="h.7pe2v5hze8p7"><span class="">Navigating a Collection Record</span></h2>
     <p class="c1"><span>Collection records have two main areas of interest: the
       </span><span>comment</span><span>&nbsp;field, which provides a brief description of the collection and its history
-        and contents; and</span><span class="c0">&nbsp;Related Resources.</span></p>
+        and contents; and the <span class="c2">related resources</span> below.</p></span></p>
     <p class="c1"><span
         style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 624.00px; height: 382.67px;"><img
           alt="" src="images/image58.png"
           style="width: 624.00px; height: 382.67px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
           title=""></span></p>
     <p class="c3 subtitle" id="h.j3aewn3qnhrl"><span class="c11">A collection record</span></p>
-    <p class="c1"><span>The items in the collection are listed in </span><span>Related Resources</span><span
+    <!-- <p class="c1"><span>The items in the collection are listed in </span><span>Related Resources</span><span
         class="c0">.</span></p>
     <p class="c1"><span>To browse the collection and search within it, select </span><span class="c2">See
         More</span><span class="c0">&nbsp;under the text previews.</span></p>
@@ -5194,17 +5194,16 @@
           alt="" src="images/image3.png"
           style="width: 624.00px; height: 424.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
           title=""></span></p>
-    <p class="c3 subtitle" id="h.wa0ihivnicm7"><span class="c11">Related resources</span></p>
+    <p class="c3 subtitle" id="h.wa0ihivnicm7"><span class="c11">Related resources</span></p> -->
     <h3 class="c7" id="h.vga9zn8lxp0k"><span class="">Browsing a Collection</span></h2>
-    <p class="c1"><span class="c0">The resulting screen shows all of the items in the collection. As with the Related
-        Resources above, the results contain a thumbnail image to give you a preview of the texts.</span></p>
+    <p class="c1"><span class="c0">At the top of a collection page, is a gray box containing all the texts related to this collection. You can make a <span class="c2">simple search</span> within these texts, using the search input field above the gray box, and/or <span class="c2">filter its content</span> using the checkboxes on the left.</span></p>
     <p class="c1"><span
         style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 624.00px; height: 442.67px;"><img
           alt="" src="images/image60.png"
           style="width: 624.00px; height: 442.67px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
           title=""></span></p>
     <p class="c3 subtitle" id="h.czy4hog7e3jg"><span class="c11">Results within a collection</span></p>
-    <h3 class="c7" id="h.9clznzgw552a"><span class="">Refining Results Within a Collection</span></h2>
+    <!-- <h3 class="c7" id="h.9clznzgw552a"><span class="">Refining Results Within a Collection</span></h2>
     <p class="c1"><span class="c0">The search filters on the left panel provide numerous ways to parse the collection
         and
         discover hidden gems, as well as information about the collection itself.</span></p>
@@ -5252,9 +5251,9 @@
           style="width: 512.00px; height: 334.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
           title=""></span></p>
     <p class="c3 subtitle" id="h.vkl3s73ybf46"><span class="c18">Excluding results</span></p>
-    <hr style="page-break-before:always;display:none;">
-    <h2 class="c5 c26" id="h.2v0i6dlg3jp1"><span class="c6"></span></h1>
-    <h2 class="c5" id="h.oop27vnyoqcf"><span>How to Search</span><span class="c6">&nbsp;by Topic</span></h1>
+    <hr style="page-break-before:always;display:none;"> -->
+
+    <h2 class="c5" id="h.oop27vnyoqcf"><span>How to Search by Topic</span></h2>
     <p class="c1"><span class="c0">Topic searches are another useful way of exploring the collection, as topic records
         include variant terms and a Related Resources section that can reveal interesting connections and assets.
       </span>
@@ -5285,7 +5284,7 @@
     <p class="c3 subtitle" id="h.8q00zmdz0d7k"><span class="c11">Searching for a topic</span></p>
     <p class="c1"><span class="c2">Note</span><span class="c0">: If you select the language before you finish typing,
         you
-        can continue typing the place name on the results page.</span></p>
+        can continue typing the topic name on the results page.</span></p>
     <h3 class="c7" id="h.cudhqctph0d1"><span class="">Opening a Topic Record</span></h2>
     <p class="c1"><span class="c0">When you&#39;ve found the topic you&#39;re looking for, select the # icon or topic
         name
