--- a/public/static/user-guide/index.en.html
+++ b/public/static/user-guide/index.en.html
@@ -4205,8 +4205,8 @@
             Record</a></span></p>
       <p class="c8"><span class="c0"><a class="c4" href="#h.vga9zn8lxp0k">Browsing a
             Collection</a></span></p>
-      <p class="c8"><span class="c0"><a class="c4" href="#h.9clznzgw552a">Refining Results Within a
-            Collection</a></span></p>
+      <!-- <p class="c8"><span class="c0"><a class="c4" href="#h.9clznzgw552a">Refining Results Within a
+            Collection</a></span></p> -->
       <p class="c19"><span class="c0"><a class="c4" href="#h.oop27vnyoqcf">How to Search by 
             Topic</a></span></p>
       <p class="c8"><span class="c0"><a class="c4" href="#h.8n15n56lhknw">Searching for a
