--- a/public/static/user-guide/index.en.html
+++ b/public/static/user-guide/index.en.html
@@ -4240,10 +4240,10 @@
       <p class="c19"><span class="c10"><a class="c4" href="#h.3lc9c0ivalmx">Using the E-text Viewer</a></span><span
           class="c10 c2 c23"><a class="c4"
             href="#h.3lc9c0ivalmx"></a></span></p>
-      <p class="c8"><span class="c0"><a class="c4" href="#h.qb2zm9l5xzo1">Upper Menu
+      <p class="c8"><span class="c0"><a class="c4" href="#h.qb2zm9l5xzo1">Menu
             Bar</a></span></p>
-      <p class="c8"><span class="c0"><a class="c4" href="#h.l20wjp2v8976">Lower Menu
-            Bar</a></span></p>
+      <!-- <p class="c8"><span class="c0"><a class="c4" href="#h.l20wjp2v8976">Lower Menu
+            Bar</a></span></p> -->
       <p class="c8"><span class="c0"><a class="c4" href="#h.utfowqo5lig">Using the Monlam
             Dictionary</a></span></p>
       <p class="c8 c27"><span class="c0"><a class="c4" href="#h.u2050pki1u4z">Opening the
@@ -5333,7 +5333,7 @@
           style="width: 624.00px; height: 398.67px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
           title=""></span></p>
     <p class="c3 subtitle" id="h.xunbqs76jk8o"><span class="c11">Initial image viewer screen</span></p>
-    <h4 class="c24" id="h.9qj4cils7ga2"><span class="">Upper Menu Bar</span></h3>
+    <h4 class="c24" id="h.9qj4cils7ga2"><span class="">Menu Bar</span></h3>
     <p class="c1"><span class="c0">On the upper menu bar, you can, from left to right:</span></p>
     <ul class="c20 lst-kix_h9vkdl3q4e6m-0 start">
       <li class="c1 c9 li-bullet-0"><span>Return </span><span class="c0">to the search result you opened the viewer
@@ -5507,17 +5507,17 @@
           style="width: 624.00px; height: 421.33px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
           title=""></span></p>
     <p class="c3 subtitle" id="h.7alv8kclaj0z"><span class="c18">The e-text viewer</span></p>
-    <h3 class="c7" id="h.qb2zm9l5xzo1"><span class="">Upper Menu Bar</span></h2>
-    <p class="c1"><span>On the upper menu bar, you can see the title of the e-text you are looking at and select
-      </span><span class="c2">X</span><span class="c0">&nbsp;to exit and return to the previous screen.</span></p>
+    <h3 class="c7" id="h.qb2zm9l5xzo1"><span class="">Menu Bar</span></h2>
+    <p class="c1"><span>The full menu bar appears once you’ve started scrolling down.</span></p> 
     <p class="c1"><span
         style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 624.00px; height: 52.00px;"><img
           alt="" src="images/image59.png"
           style="width: 624.00px; height: 52.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
           title=""></span></p>
-    <p class="c3 subtitle" id="h.9hzzkeyw6o4s"><span class="c11">Upper menu bar</span></p>
-    <h3 class="c7" id="h.l20wjp2v8976"><span>Lower Menu Bar</span></h2>
-    <p class="c1"><span class="c0">On the lower menu bar, you can, from left to right:</span></p>
+    <p class="c3 subtitle" id="h.ltz6fehwqyrg"><span class="c18">Menu bar</span></p>
+    
+    <p class="c1"><span>On the upper part of the menu bar, you can see the title of the e-text you are looking at and select <span class="c2">Back</span> to exit and return to the previous screen.</p>
+    <p class="c1"><span class="c0">On the lower part of the menu bar, you can, from left to right:</span></p>
     <ul class="c20 lst-kix_c0xunp6vto44-0 start">
       <li class="c1 c9 li-bullet-0"><span class="c0">Download the e-text in Tibetan in unicode or Tibetan transliterated
           into Wylie.</span></li>
@@ -5531,15 +5531,16 @@
           script</span><span class="c0">.</span></li>
       <li class="c1 c9 li-bullet-0"><span>Dis</span><span class="c0">play scans (when available) between e-text
           pages.</span></li>
+      <li class="c1 c9 li-bullet-0"><span>Search inside this collection/volume/text.</span></li>
     </ul>
     <p class="c1"><span class="c2">Note</span><span class="c0">: The option to download e-texts is disabled for
         copyrighted texts. </span></p>
-    <p class="c1"><span
+    <!-- <p class="c1"><span
         style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 624.00px; height: 49.33px;"><img
           alt="" src="images/image40.png"
           style="width: 624.00px; height: 49.33px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
-          title=""></span></p>
-    <p class="c3 subtitle" id="h.ltz6fehwqyrg"><span class="c18">Lower menu bar</span></p>
+          title=""></span></p> -->
+    <!-- <p class="c3 subtitle" id="h.ltz6fehwqyrg"><span class="c18">Lower menu bar</span></p> -->
     <h3 class="c7" id="h.utfowqo5lig"><span class="">Using the Monlam Dictionary</span></h2>
     <p class="c1"><span>The </span><span class="c14"><a class="c4"
           target="_blank"
@@ -5588,7 +5589,7 @@
           alt="" src="images/image4.gif"
           style="width: 624.00px; height: 408.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
           title=""></span></p>
-    <p class="c3 subtitle" id="h.pkn8c3dsmsj1"><span class="c11">Displaying a single scan</span></p>
+    <p class="c3 subtitle" id="h.pkn8c3dsmsj1"><span class="c11">Displaying scans</span></p>
     <p class="c31 c27"><span class="c0"></span></p>
   </div>
 </div>
