final updates/screenshots (#1058)

--- a/public/static/user-guide/index.en.html
+++ b/public/static/user-guide/index.en.html
@@ -5515,7 +5515,16 @@
       <p class="c3 subtitle" id="h.7alv8kclaj0z"><span class="c18">The e-text viewer</span></p>
 
       <h2 class="c5" id="h.qb2zm9l5xzo123"><span class="">Navigating from Collections to Texts</span></h2>
-      <p class="c1"><span> ... </span></p> 
+
+      <p class="c1"><span class="c0">Using the outline on the left of the viewer, you can click any volume of the collection to open it in the viewer. You can then click any text inside the given volume in the outline and it will open in the viewer as well.</span></p>
+
+      <p class="c1"><span
+        style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 624.00px; height: 52.00px;"><img
+          alt="" src="images/image61.gif"
+          style="width: 624.00px; height: 52.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
+          title=""></span></p>
+    <p class="c3 subtitle" id="h.ltz6fehwqyrgh"><span class="c18">Navigation inside a collection</span></p>
+    
 
       <h2 class="c5" id="h.qb2zm9l5xzo1"><span class="">Menu Bar</span></h2>
       <p class="c1"><span>The full menu bar appears once you’ve started scrolling down.</span></p> 
@@ -5587,8 +5596,13 @@
 
 
       <h2 class="c5" id="h.qb2zm9l5xzo456"><span class="">In-Text Search</span></h2>
-      <p class="c1"><span> ... </span></p> 
-
+      <p class="c1"><span>Using the in-text search bar located at the right of the lower part of the menu bar, you can find any keyword inside the current etext. To select a different scope for your search, just select another volume or text in the outline, or the whole collection itself.</span></p> 
+      <p class="c1"><span
+        style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 624.00px; height: 389.33px;"><img
+          alt="" src="images/image62.gif"
+          style="width: 624.00px; height: 389.33px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
+          title=""></span></p>
+    <p class="c3 subtitle" id="h.f4dn40f96f3xh"><span class="c11">Search inside a collection</span></p>
 
       <h2 class="c5" id="h.hgchumv2b2ml"><span class="">Opening Scans</span></h2>
       <p class="c1"><span class="c0">Opening scans is useful for when you want to check the accuracy of an OCRed
